--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         map.data.loadGeoJson('https://storage.googleapis.com/mapsdevsite/json/google.json');
        
         /* Loading GeoJson Files */
-        data = map.data.loadGeoJson('/UK-Adresses/W.geojson');
+        data = map.data.loadGeoJson('UK-Adresses/W.geojson');
         map.data.addGeoJson(data);
 
         map.data.setStyle({ icon: '//example.com/path/to/image.png', fillColor: 'green'});
