--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         map.data.loadGeoJson('https://storage.googleapis.com/mapsdevsite/json/google.json');
        
         /* Loading GeoJson Files */
-        data = map.data.loadGeoJson('UK-Adresses/W.geojson');
-        map.data.addGeoJson(data);
+        w = map.data.loadGeoJson('UK-Adresses/W.geojson');
+        map.data.addGeoJson(w);
 
         map.data.setStyle({ icon: '//example.com/path/to/image.png', fillColor: 'green'});
         map.data.add({geometry: new google.maps.Data.Polygon([outerCoords, innerCoords1,innerCoords2])})
