--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         b = map.data.loadGeoJson('UK-Adresses/B.geojson');
         map.data.addGeoJson(b);
 
-        map.data.setStyle({ icon: '//example.com/path/to/image.png', fillColor: 'green'});
+        map.data.setStyle({ icon: '//example.com/path/to/image.png', fillColor: 'yellow'});
         
         
         // const testFolder = './UK-Adresses';
