--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         map.data.addGeoJson(e);
         b = map.data.loadGeoJson('UK-Adresses/B.geojson');
         map.data.addGeoJson(b);
+        tr = map.data.loadGeoJson('UK-Adresses/TR.geojson');
+        map.data.addGeoJson(tr);
+        sw = map.data.loadGeoJson('UK-Adresses/SW.geojson');
+        map.data.addGeoJson(sw);
+        ox = map.data.loadGeoJson('UK-Adresses/OX.geojson');
+        map.data.addGeoJson(ox);
 
         map.data.setStyle({ icon: '//example.com/path/to/image.png', fillColor: 'yellow'});
         
