--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    map.data.overrideStyle(event.feature, {fillColor: 'black'});
 });
 
-        map.data.setStyle({ icon: '//example.com/path/to/image.png', fillColor: 'yellow'});
+        map.data.setStyle({fillColor: 'yellow', strokeWeight: 1});
         
         
         // const testFolder = './UK-Adresses';
