--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       #map {
         height: 60%;
         width: 60%;
+        align-content: center;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
