--- a/index.html
+++ b/index.html
@@ -37,14 +37,19 @@
         map.data.addGeoJson(w);
         e = map.data.loadGeoJson('UK-Adresses/E.geojson');
         map.data.addGeoJson(e);
+        ec = map.data.loadGeoJson('UK-Adresses/EC.geojson');
+        map.data.addGeoJson(e);
         b = map.data.loadGeoJson('UK-Adresses/B.geojson');
         map.data.addGeoJson(b);
         tr = map.data.loadGeoJson('UK-Adresses/TR.geojson');
         map.data.addGeoJson(tr);
         sw = map.data.loadGeoJson('UK-Adresses/SW.geojson');
         map.data.addGeoJson(sw);
+        nw = map.data.loadGeoJson('UK-Adresses/NW.geojson');
+        map.data.addGeoJson(sw);
         ox = map.data.loadGeoJson('UK-Adresses/OX.geojson');
         map.data.addGeoJson(ox);
+        wc = map.data.loadGeoJson('UK-Adresses/WC.geojson')
 
         // map.data.addListener('click', function(event) {
         // map.data.overrideStyle(event.feature, {fillColor: 'black'});
