--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+
   </head>
   <body>
 
@@ -79,5 +79,22 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhfs3WQijSbqOY-RDmoC1RoYfc3RIiRs4&callback=initMap">
     </script>
+
+
+<div class='my-legend'>
+    <div class='legend-title'>The Title or Explanation of your Map</div>
+    <div class='legend-scale'>
+      <ul class='legend-labels'>
+        <li><span style='background:rgb(214, 20, 20);'></span>0</li>
+        <li><span style='background:rgb(12, 67, 179);'></span>>2.5</li>
+        <li><span style='background:rgb(255, 251, 0);'></span>>5</li>
+        <li><span style='background:rgb(81, 221, 0);'></span>7.5</li>
+      </ul>
+    </div>
+    <div class='legend-source'>Source: <a href="#link to source">Name of source</a></div>
+    </div>
+
+
+
   </body>
 </html>
