--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 
     <div id="map"> </div>
     <script>
-      initMap();
+      var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 7,
+      center: {lat: 52.500, lng: 0.250},
+      });
+      initMap(map);
       </script>
-      
+
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhfs3WQijSbqOY-RDmoC1RoYfc3RIiRs4&callback=initMap">
     </script>
 
