--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     map.data.addListener('mouseover', function(event) {
     map.data.overrideStyle(event.feature, {fillColor: 'black'});
-    alert(event.feature.getProperty('average'));
+    // alert(event.feature.getProperty('average'));
     });
 
 
