--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div style="text-align:center">
       <h2> UK Well-Being Data </h2>
     </div>
+
+    <div id="info-box">?</div>
     
     <div id="map"></div>
     <script>
@@ -43,8 +45,7 @@
     
 
     map.data.addListener('mouseover', function(event) {
-    map.data.overrideStyle(event.feature, {fillColor: 'black'});
-    alert(event.feature.getProperty('name'));
+      document.getElementById('info-box').textContent = event.feature.getProperty('name');
     });
 
 
