--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
 
     map.data.addListener('mouseover', function(event) {
-      document.getElementById('info-box').textContent = event.feature.getProperty('name');
+      document.getElementById('info-box').textContent = event.feature.getProperty('score');
     });
 
 
