--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
     ox = map.data.loadGeoJson('UK-Adresses/OX.geojson');
     map.data.addGeoJson(ox);
     wc = map.data.loadGeoJson('UK-Adresses/WC.geojson');
+    map.data.addGeoJson(wc);
+    en = map.data.loadGeoJson('UK-Adresses/EN.geojson');
+    map.data.addGeoJson(en);
+   
     
 
     map.data.addListener('mouseover', function(event) {
