--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     map.data.addGeoJson(wc);
     en = map.data.loadGeoJson('UK-Adresses/EN.geojson');
     map.data.addGeoJson(en);
+    se = map.data.loadGeoJson('UK-Adresses/SE.geojson');
+    map.data.addGeoJson(se);
+    n = map.data.loadGeoJson('UK-Adresses/N.geojson');
+    map.data.addGeoJson(n);
+    cm = map.data.loadGeoJson('UK-Adresses/CM.geojson');
+    map.data.addGeoJson(cm);
    
     
 
