Style and HTML changes

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
 
+    
     <div style="text-align:center">
       <h2> UK Well-Being Data </h2>
     </div>
+    <!-- <div id="info-box"> ? </div> -->
 
-    <div id="info-box">?</div>
-    
     <div id="map"></div>
 
 
